<resources>
    <string name="app_name">scolarite</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_user_firstname">Prenom</string>
    <string name="prompt_user_lastname">Nom</string>
    <string name="prompt_adresse">Adresse</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_rwpassword">Rewrite Password</string>
    <string name="prompt_telephone">Telephone</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>